<resources>
    <string name="app_name">FormulaDictionary</string>
    <string name="drivers">Drivers</string>
    <string name="teams">Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team">Team:</string>
    <string name="nationality">Nationality:</string>
    <string name="age">Age:</string>
    <string name="champion_number">Champions Number:</string>
    <string name="pole">Pole:</string>
    <string name="season">Season:</string>
    <string name="win_number">Win Number</string>
    <string name="bottomsheetstick">bottomSheetStick</string>
    <string name="team_name">Team Name:</string>
    <string name="homeland">Homeland:</string>
    <string name="teamimage">teamImage</string>
</resources>