<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_dialog">

        <ImageView
            android:id="@+id/imageTop"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:background="@drawable/horizontal_rule_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/bottomsheetstick" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSliderDriver"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageTop" />

        <TextView
            android:id="@+id/tvDriverTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/team"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSliderDriver" />

        <TextView
            android:id="@+id/driverDetailTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverTeam"
            app:layout_constraintTop_toBottomOf="@id/imageSliderDriver" />

        <TextView
            android:id="@+id/tvDriverNation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/nationality"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDriverTeam" />

        <TextView
            android:id="@+id/driverDetailNation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverNation"
            app:layout_constraintTop_toBottomOf="@id/driverDetailTeam" />

        <TextView
            android:id="@+id/tvDriverAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDriverNation" />

        <TextView
            android:id="@+id/driverDetailAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverAge"
            app:layout_constraintTop_toBottomOf="@id/driverDetailNation" />

        <TextView
            android:id="@+id/tvDriverChamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/champion_number"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDriverAge" />

        <TextView
            android:id="@+id/driverDetailChamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverChamp"
            app:layout_constraintTop_toBottomOf="@id/driverDetailAge" />

        <TextView
            android:id="@+id/tvDriverPole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/pole"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDriverChamp" />

        <TextView
            android:id="@+id/driverDetailPole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverPole"
            app:layout_constraintTop_toBottomOf="@id/driverDetailChamp" />

        <TextView
            android:id="@+id/tvDriverSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/season"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDriverPole" />

        <TextView
            android:id="@+id/driverDetailSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverSeason"
            app:layout_constraintTop_toBottomOf="@id/driverDetailPole" />

        <TextView
            android:id="@+id/tvDriverWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/win_number"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvDriverSeason" />

        <TextView
            android:id="@+id/driverDetailWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvDriverWin"
            app:layout_constraintTop_toBottomOf="@id/driverDetailSeason" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>