<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">

        <ImageView
            android:id="@+id/imageTeam"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/teamimage" />

        <TextView
            android:id="@+id/teamDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvTeamName"
            app:layout_constraintTop_toBottomOf="@id/imageTeam" />

        <TextView
            android:id="@+id/teamDetailChamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvTeamChamp"
            app:layout_constraintTop_toBottomOf="@+id/teamDetailHome" />

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/team_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageTeam" />

        <TextView
            android:id="@+id/tvTeamChamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/champion_number"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvTeamHome"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="464dp" />

        <TextView
            android:id="@+id/teamDetailHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text=""
            android:textColor="@color/secondaryColor"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tvTeamHome"
            app:layout_constraintTop_toBottomOf="@id/teamDetailName" />

        <TextView
            android:id="@+id/tvTeamHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/changa_one"
            android:text="@string/homeland"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTeamName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>